fix: disable danmu-input's spellcheck and scrollbar

--- a/src/main-window/main-window.css
+++ b/src/main-window/main-window.css
@@ -407,7 +407,12 @@ button:hover {
 
 #danmu-sender > span:nth-child(2) {
   transition: all 0.5s ease;
-  width: 0px;
+  width: 20px;
+  overflow: auto;
+}
+
+#danmu-sender > span:nth-child(2)::-webkit-scrollbar {
+  display: none;
 }
 
 #danmu-sender > span:nth-child(2):focus {
